@@ -248,3 +248,4 @@ https://www.idn.com.tw/news/news_content.aspx?catid=4&catsid=2&catdid=0&artid=20
 http://www.hkcna.hk/content/2020/0717/839039.shtml
 https://www.hkcnews.com/article/32082/national_security_law-press_freedom-32082/setting“red-lines”or-testing-the-boundaries
 https://howlife.cna.com.tw/local/20200716S010.aspx
+https://opinion.udn.com/opinion/story/120954/4715139?list_ch2_indexgold
