@@ -1,3 +1,4 @@
+  - Improve the extraction of dateline and journalist for opinion.udn.com
   - Start parsing dateline string and refromat them as ISO8601
 
 v0.32.0 2020-07-18T07:23:04+0800
